--- a/emailReply.html
+++ b/emailReply.html
@@ -6,12 +6,9 @@
   <body>
     <p>
       <?= anrede ?>,<br /><br />
-      wir haben eine Anmeldung für eine oder mehrere Mehrtagestour(en)
-      erhalten.<br />
+      wir haben von Ihnen eine Anmeldung für eine oder mehrere Mehrtagestour(en)
+      erhalten.<br /><br />
       <?= msg ?><br /><br />
-      Wir möchten wissen: War die Anmeldung wirklich von Ihnen?<br />
-      Wenn ja, klicken Sie bitte auf
-      <a href="<?= verifLink ?>">diesen Link</a>.<br />
       Mit freundlichen Grüßen,<br />
       <br />
       Allgemeiner Deutscher Fahrrad-Club München e.V.<br />
