still more fixes

--- a/emailBestätigung.html
+++ b/emailBestätigung.html
@@ -6,7 +6,7 @@
   <body>
     <p>
       <?= anrede ?>,<br /><br />
-      hiermit bestätigen wir Ihnen, daß Sie für die Reise<br /><br />
+      hiermit bestätigen wir Ihnen, daß Sie für die Mehrtagestour<br /><br />
       <?= reise ?><br /><br />
       verbindlich angemeldet sind. Der Betrag von
       <?= betrag ?>€ wird per Lastschrift abgebucht. Mit freundlichen Grüßen,<br />
