--- a/emailVerif.html
+++ b/emailVerif.html
@@ -7,9 +7,9 @@
     <p>
       <?= anrede ?>,<br /><br />
       wir haben von Ihnen eine Anmeldung für einen oder mehrere Technikkurs(e) erhalten.<br />
-      <? for (let msg of msgs) { ?>
+      <? for (let kurs of kurse) { ?>
         <p>
-          <?= msg ?>
+          <?= kurs ?>
         </p>
       <? } ?>  
       Wir möchten wissen: War die Anmeldung wirklich von Ihnen?<br />
@@ -21,7 +21,7 @@
       Platenstraße 4<br />
       80336 München<br />
       Tel. 089 | 773429 Fax 089 | 778537<br />
-      mehrtagestouren@adfc-muenchen.de<br />
+      technikkurse@adfc-muenchen.de<br />
       www.adfc-muenchen.de<br />
     </p>
   </body>
