"bezahlen" used in emails

--- a/emailBestätigung.html
+++ b/emailBestätigung.html
@@ -13,8 +13,7 @@
         </p>
       <? } ?>
       <? if (betrag > 0) { ?>  
-      Der Betrag von
-      <?= betrag ?>€ wird vor Kursbeginn per Lastschrift abgebucht.<br/>
+      <?= bezahlen ?><br/>
       <? } ?> 
       Mit freundlichen Grüßen,<br />
       <br />
