Sie->Du,Event->SSEvent

--- a/emailVerif.html
+++ b/emailVerif.html
@@ -6,22 +6,22 @@
   <body>
     <p>
       <?= anrede ?>,<br /><br />
-      wir haben von Ihnen eine Anmeldung für einen oder mehrere Technikkurs(e) erhalten.<br />
+      wir haben von Dir eine Anmeldung für einen oder mehrere Technikkurs(e) erhalten.<br />
       <? for (let kurs of kurse) { ?>
         <p>
           <?= kurs ?>
         </p>
       <? } ?>  
-      Wir möchten wissen: War die Anmeldung wirklich von Ihnen?<br />
-      Wenn ja, klicken Sie bitte auf
+      Wir möchten wissen: War die Anmeldung wirklich von Dir?<br />
+      Wenn ja, klicke bitte auf
       <a href="<?= verifLink ?>">diesen Link</a>.<br />
       Mit freundlichen Grüßen,<br />
       <br />
       Allgemeiner Deutscher Fahrrad-Club München e.V.<br />
       Platenstraße 4<br />
       80336 München<br />
-      Tel. 089 | 773429 Fax 089 | 778537<br />
-      technikkurse@adfc-muenchen.de<br />
+      Tel. 089 | 773429<br />
+      anmeldungen-technikkurse@adfc-muenchen.de<br />
       www.adfc-muenchen.de<br />
     </p>
   </body>
