--- a/emailBestätigung.html
+++ b/emailBestätigung.html
@@ -6,7 +6,7 @@
   <body>
     <p>
       <?= anrede ?>,<br />
-      hiermit möchten wir Ihnen mitteilen:<br />
+      hiermit möchten wir Dir mitteilen:<br />
       <? for (let kurs of kurse) { ?>
         <p>
           <?= kurs ?>
@@ -20,8 +20,8 @@
       Technikkurse Allgemeiner Deutscher Fahrrad-Club München e.V.<br />
       Platenstraße 4<br />
       80336 München<br />
-      Tel. 089 | 773429 Fax 089 | 778537<br />
-      technikkurse@adfc-muenchen.de<br />
+      Tel. 089 | 773429<br />
+      anmeldungen-technikkurse@adfc-muenchen.de<br />
       www.adfc-muenchen.de<br />
     </p>
   </body>
