checkManually TODO: Kursbeginn ab 2025

--- a/emailBestätigung.html
+++ b/emailBestätigung.html
@@ -15,6 +15,7 @@
       <? if (betrag > 0) { ?>  
       <?= bezahlen ?><br/>
       <? } ?> 
+      Sofern beim Kursnamen nichts von 10-12 Uhr steht, findet der Kurs ab 18:00 im Radlerhaus statt.<br />
       Mit freundlichen Grüßen,<br />
       <br />
       Technikkurse Allgemeiner Deutscher Fahrrad-Club München e.V.<br />
@@ -22,7 +23,7 @@
       80336 München<br />
       Tel. 089 | 773429<br />
       anmeldungen-technikkurse@adfc-muenchen.de<br />
-      www.adfc-muenchen.de<br />
+      https://muenchen.adfc.de<br />
     </p>
   </body>
 </html>
